# pa

./: pyproject.toml
src/pa/: transcriber.py
